# PolyGen

./: .gitignore  AGENTS.ko.md  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  MYSQL_TODO.md  PHASE4_TODO.md  PolyGen.sln  README.md  REFACTORING_TODO.md  RHAI_REFACTOR_PLAN.md  SQL_TODO.md  TODO.md  TODO_KR.md  agent.md  buildlog.txt  buildlog2.txt  buildlog3.txt  changelog  commit_message.txt  deploy.bat  development_guide.md  game_schema.poly  inventoryitem_columns_explained.md  package-lock.json  player_columns_explained.md  playerskill_columns_explained.md  run_all.txt  rundemo.ps1  runlog.txt  sample.polygen  temp_debug.txt  test_output.txt
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-viewer.yml  gui-ci.yml  gui-release.yml  release.yml
docs/: ANNOTATIONS_AND_ATTRIBUTES.md  CUSTOMIZATION.md  IMPLEMENTATION_ROADMAP.md  LANGUAGE_SUPPORT_GUIDE.md  NEXT_SESSION_PROMPT.md  PHASE4_TODO.md  PROJECT_STRUCTURE.md  PTPL_LANGUAGE_GUIDE.md  README.md  REFACTORING_TODO.md  SOURCE_STRUCTURE.md  SQL_TODO.md  TEMPLATE_REFACTOR_PLAN.md  TODO.md  agent.md  json-to-csv-spec.md  json_table_widget_proposal.md  polytemplate-guide.md  polytemplate-spec.md  project-structure.md  schema-annotations.md  source-structure.md  sources-config.md  status.md  template-customization.md
docs/examples/: README.md  basic-schema.md  constraints.md  features.md  pack-embed.md  quickstart.md  relations-indexes.md  search.md  sources.md
docs/targets/: README.md  language-support.md  sql-support.md
docs/tools/: README.md  gui.md  lsp.md  poly-viewer.md  vscode-extension.md
example/: playerskill_columns_explained.md
examples/: JsonToCsvDemo.cs  agent.md  common_types.poly  csv_colum.txt  game_schema.poly  game_schema.sources.toml  household_budget.poly  household_budget.sources.toml  monster_columns_explained.md  player_columns_explained.md  quickstart.poly  quickstart.sources.toml  run-feature-example.ps1  run-quickstart.ps1
examples/data/: accounts.csv  accounts.json  budgets.csv  budgets.json  categories.csv  categories.json  items.csv  savings_goals.csv  savings_goals.json  tags.csv  transaction_tags.csv  transactions.csv  transactions.json
examples/features/: constraints.poly  pack_embed.poly  relations_indexes.poly  search.poly  sources.poly  sources.sources.toml
gui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  main.rs
output/: ast_debug.txt  sample_data.json
output/csharp/: GeneratedFromTemplate.cs  GlobalTypes.cs  common_types.cs  game_schema.cs
output/debug/: parse_tree.txt
output/diagram/: class_diagram.md
polygen-lsp/: Cargo.toml  README.md
polygen-lsp/src/: main.rs  symbol_table.rs
polygen-vscode/: README.md  language-configuration.json  package-lock.json  package.json
polygen-vscode/src/: extension.ts
polygen-vscode/syntaxes/: poly.tmLanguage.json
scripts/: README.md  build-gui.bat  clean_temp_review.ps1  copy_output_for_review.ps1  dev-gui.bat
src/: agent.md  ast.rs  ast_model.rs  ast_parser.rs  codegen.rs  csharp_generator.rs  csharp_model.rs  db_introspection.rs  error.rs  generator.rs  ir_builder.rs  ir_model.rs  lang_config.rs  lib.rs  main.rs  mermaid_generator.rs  mermaid_model.rs  migration.rs  pipeline.rs  polygen.pest  rhai_generator.rs  schema_diff.rs  schema_lint.rs  schema_metadata.rs  schema_stats.rs  sources_config.rs  symbol_table.rs  type_registry.rs  validation.rs  visualize.rs
src/ast_parser/: definitions.rs  fields.rs  helpers.rs  literals.rs  macros.rs  metadata.rs  mod.rs  types.rs
src/ir_builder/: constraints.rs  indexes.rs  metadata.rs  relations.rs  renames.rs  type_names.rs  type_resolution.rs
src/rhai/: csharp.rs  csv.rs  mod.rs  registry.rs
src/template/: context.rs  expr.rs  filters.rs  mod.rs  parser.rs  renderer.rs  rhai_bridge.rs  source_map.rs
static/: agent.md
static/cpp/: polygen_support.hpp
static/csharp/: BinaryRef.cs  BinaryUtils.cs  CsvUtils.cs  DataContainer.cs  DataSource.cs  JsonCsvConverter.cs  JsonUtils.cs  PolygenAttributes.cs  Validation.cs
static/go/: polygen_support.go
static/rust/: polygen_support.rs
static/typescript/: binary_ref.ts  validation.ts
templates/: agent.md  csharp_file.jinja  csharp_template.cs.tera
templates/cpp/: cpp.toml  cpp_binary_refs_file.ptpl  cpp_container_file.ptpl  cpp_container_file.rhai  cpp_enum.rhai  cpp_file.ptpl  cpp_file.rhai  cpp_loaders_file.ptpl  cpp_loaders_file.rhai  cpp_mod.rhai  cpp_redis_keys_file.ptpl  cpp_sqlite_accessor_file.ptpl  cpp_sqlite_accessor_file.rhai  cpp_struct.rhai
templates/csharp/: _class.cs.txt  _enum.cs.txt  _namespace.cs.txt  _struct.cs.txt  csharp.toml  csharp_binary_readers.rhai  csharp_binary_readers_file.ptpl  csharp_binary_readers_file.rhai  csharp_binary_readers_namespace.rhai  csharp_binary_refs_file.ptpl  csharp_binary_writers.rhai  csharp_binary_writers_file.ptpl  csharp_binary_writers_file.rhai  csharp_binary_writers_namespace.rhai  csharp_container_file.ptpl  csharp_container_file.rhai  csharp_container_namespace.rhai  csharp_csv_columns_file.ptpl  csharp_csv_columns_file.rhai  csharp_csv_mappers.rhai  csharp_csv_mappers_file.ptpl  csharp_csv_mappers_file.rhai  csharp_csv_mappers_namespace.rhai  csharp_csv_readers_namespace.rhai  csharp_csv_writers_namespace.rhai  csharp_datacontext_file.ptpl  csharp_datacontext_file.rhai  csharp_file.jinja  csharp_file.rhai  csharp_json_mappers.rhai  (+18 more)
tests/: agent.md  db_migration_tests.rs  snapshot_tests.rs
tests/runners/cpp/: CMakeLists.txt  README.md  compile_test.bat  run_all_tests.bat  run_tests.bat  run_tests.sh
tests/runners/cpp/tests/: test_01_basic_types.cpp  test_02_imports.cpp  test_03_nested_namespaces.cpp  test_04_inline_enums.cpp  test_05_embedded_structs.cpp  test_06_arrays_and_optionals.cpp  test_07_indexes.cpp  test_08_complex_schema.cpp  test_09_sqlite.cpp  test_10_pack_embed.cpp  test_11_relations_indexes.cpp
(+483 files in other folders)
