[package]
name = "polygen"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
heck = "0.5" # For case conversions
serde = { version = "1.0", features = ["derive"] }
regex = "1"
once_cell = "1"
rhai = "1.22.2"
toml = "0.8" # For language config parsing

anyhow = "1.0"
askama = "0.12"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
walkdir = "2.5"
tempfile = "3.10" # For testing with temporary directories
