[package]
name = "polygen"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
heck = "0.5" # For case conversions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
once_cell = "1"
rhai = "1.22.2"
toml = "0.8" # For language config parsing

anyhow = "1.0"
askama = "0.12"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] } # For SQLite introspection

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }
walkdir = "2.5"
tempfile = "3.10" # For testing with temporary directories
