[package]
name = "polygen-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for PolyGen schema language"
authors = ["PolyGen Team"]

[[bin]]
name = "polygen-lsp"
path = "src/main.rs"

[dependencies]
polygen = { path = ".." }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2.8"
