[package]
name = "polygen-gui"
version = "0.1.0"
description = "PolyGen GUI - Polyglot Code Generator"
authors = ["PolyGen Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polygen = { path = "../.." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
